# summer_project_app

./: .gitignore  README.md  agents_temp.py  app.py  crew_log.txt  main.py  pyproject.toml  tasks.py
agents/: __init__.py  candidate_ranking.py  job_spec_analyst.py  profile_enrichment.py  sourcing_agent.py  utils.py
dspy_logic/: config.py  programs.py  signatures.py
tasks/: .__init__.py  analysis_task.py  enrichment_task.py  ranking_task.py  sourcing_task.py  utils.py
tests/: test_crew.py
tools/: custom_tools.py
